; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lheader.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"Invalid read %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lheader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lheader(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @luaL_checklstring(i32* %8, i32 1, i64* %4)
  %10 = inttoptr i64 %9 to i64*
  store i64* %10, i64** %5, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ugt i64 %11, 4
  br i1 %12, label %16, label %13

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  %15 = icmp ult i64 %14, 1
  br i1 %15, label %16, label %20

16:                                               ; preds = %13, %1
  %17 = load i32*, i32** %3, align 8
  %18 = load i64*, i64** %5, align 8
  %19 = call i32 @luaL_error(i32* %17, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64* %18)
  store i32 %19, i32* %2, align 4
  br label %44

20:                                               ; preds = %13
  store i64 0, i64* %7, align 8
  store i32 0, i32* %6, align 4
  br label %21

21:                                               ; preds = %36, %20
  %22 = load i32, i32* %6, align 4
  %23 = load i64, i64* %4, align 8
  %24 = trunc i64 %23 to i32
  %25 = icmp slt i32 %22, %24
  br i1 %25, label %26, label %39

26:                                               ; preds = %21
  %27 = load i64, i64* %7, align 8
  %28 = shl i64 %27, 8
  store i64 %28, i64* %7, align 8
  %29 = load i64*, i64** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i64, i64* %29, i64 %31
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* %7, align 8
  %35 = or i64 %34, %33
  store i64 %35, i64* %7, align 8
  br label %36

36:                                               ; preds = %26
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %21

39:                                               ; preds = %21
  %40 = load i32*, i32** %3, align 8
  %41 = load i64, i64* %7, align 8
  %42 = trunc i64 %41 to i32
  %43 = call i32 @lua_pushinteger(i32* %40, i32 %42)
  store i32 1, i32* %2, align 4
  br label %44

44:                                               ; preds = %39, %16
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i64 @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @luaL_error(i32*, i8*, i64*) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
